<resources>
    <string-array name="impacts">
        <item>All</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="transport_activity">
        <item>Select an activity</item>
        <item>Drive personal vehicle</item>
        <item>Take public transportation</item>
        <item>Cycling or walking</item>
        <item>Flight</item>
    </string-array>
    <string-array name="transport_type">
        <item>Select a transport type</item>
        <item>bus</item>
        <item>train</item>
        <item>subway</item>
    </string-array>
    <string-array name="haul_type">
        <item>Select the haul type</item>
        <item>short haul</item>
        <item>long haul</item>
    </string-array>
    <string-array name="food_activity">
        <item>Select an activity</item>
        <item>Meal</item>
    </string-array>
    <string-array name="food_type">
        <item>Select the food type</item>
        <item>beef</item>
        <item>pork</item>
        <item>chicken</item>
        <item>fish</item>
        <item>plant-based</item>
    </string-array>
    <string-array name="consumption_activity">
        <item>Select an activity</item>
        <item>Buy new clothes</item>
        <item>Buy electronics</item>
        <item>Other purchases</item>
        <item>Energy bills</item>
    </string-array>
    <string-array name="device_type">
        <item>Select the electronic device type</item>
        <item>smartphone</item>
        <item>laptop</item>
        <item>TV</item>
        <item>earphone</item>
        <item>monitor</item>
        <item>other</item>
    </string-array>
    <string-array name="time_range_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="fish_seafood_eating_frequency">
        <item>--select--</item>
        <item>Daily</item>
        <item>Frequently (3-5 times/week)</item>
        <item>Occasionally (1-2 times/week)</item>
        <item>Never</item>
    </string-array>
    <string-array name="country_list">
        <item>--Select your country--</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bonaire Sint Eustatius and Saba</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Cote d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curacao</item>
        <item>Cyprus</item>
        <item>Czechia</item>
        <item>Democratic Republic of Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Polynesia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macao</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>North Korea</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Oceania</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Sint Maarten (Dutch part)</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis and Futuna</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string-array name="beef_eating_frequency">
        <item>--select--</item>
        <item>Daily</item>
        <item>Frequently (3-5 times/week)</item>
        <item>Occasionally (1-2 times/week)</item>
        <item>Never</item>
    </string-array>
    <string-array name="pork_eating_frequency">
        <item>--select--</item>
        <item>Daily</item>
        <item>Frequently (3-5 times/week)</item>
        <item>Occasionally (1-2 times/week)</item>
        <item>Never</item>
    </string-array>
    <string name="Transportation">Transportation</string>
    <string name="select_activity">Select an Activity</string>
    <string name="hint_int">e.g. 2</string>
    <string name="hint_double">e.g. 1.5</string>
    <string name="add">Add</string>
    <string name="distance_driven">Distance Driven (km)</string>
    <string name="select_transport_type">Select the Public Transport Type</string>
    <string name="time_spent">Time Spent on Public Transport (hours)</string>
    <string name="distance_walked">Distance Cycled or Walked (km)</string>
    <string name="select_haul_type">Select Haul Type (Short Haul &lt;1500km)</string>
    <string name="num_flight">Number of Flights Taken Today</string>
    <string name="purchase_confirmation">Your purchase is confirmed!</string>
    <string name="confirmation_message">Congratulations on offsetting CO₂e emissions and making a positive impact!</string>
    <string name="planetze_globe_logo_desc">PlanetZe Globe Logo</string>
    <string name="eco_hub">Eco Hub</string>
    <string name="about_eco_hub">Feel empowered with knowledge, trends, and tools for sustainable living!</string>
    <string name="books">Books</string>
    <string name="articles">Articles</string>
    <string name="movies">Movies</string>
    <string name="videos">Videos</string>
    <string name="podcasts">Podcasts</string>
    <string name="market_trends">Market Trends</string>
    <string name="samsung_title">Samsung Extra Wide Bottom Mount Freezer</string>
    <string name="samsung_description">The Samsung RB6000D refrigerator is designed for energy efficiency, featuring a Digital Inverter Compressor. This technology adjusts the compressor speed based on cooling demand, reducing energy consumption and minimizing wear and tear.</string>
    <string name="encircled_title"><![CDATA[Encircled | Ethical & Sustainable Women\'s Clothing]]></string>
    <string name="encircled_description"><![CDATA[Canadian & female-founded sustainable clothing brand dedicated to ethical clothing that is comfortable, travel-friendly & made in Canada.]]></string>
    <string name="kasa_title">TP-Link Kasa Smart Wi-Fi Plug</string>
    <string name="kasa_description">An energy-efficient smart plug designed to control connected devices remotely through the Kasa Smart app. It helps reduce energy consumption by allowing users to schedule on/off times for appliances, monitor energy usage, and optimize power settings.</string>
</resources>