<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8EBF2">

    <!-- Image at the top -->

    <!-- Confirmation message -->
    <ImageView
        android:id="@+id/confirmationImage"
        android:layout_width="334dp"
        android:layout_height="376dp"
        android:layout_marginTop="144dp"
        android:contentDescription="@string/planetze_globe_logo_desc"
        android:scaleType="centerInside"
        android:src="@drawable/planetze_globe_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/purchaseConfirmedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/purchase_confirmation"
        android:textColor="#009999"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/confirmationImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Congratulations message -->
    <TextView
        android:id="@+id/congratulationsText"
        android:layout_width="362dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/confirmation_message"
        android:textColor="#009999"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchaseConfirmedText" />

    <!-- Navigation Bar -->
    <include
        android:id="@+id/footer"
        layout="@layout/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
